--- a/src/App.sass
+++ b/src/App.sass
@@ -31,16 +31,21 @@ $yellow: rgba(55, 50, 62, 1);
 
 $family-sans-serif: 'Roboto', sans-serif;
 
+$footer-background-color: #141217;
+
 @import '../node_modules/bulma/sass/utilities/_all.sass';
 @import '../node_modules/bulma/sass/base/_all.sass';
 @import '../node_modules/bulma/sass/grid/_all.sass';
 @import '../node_modules/bulma/sass/elements/button.sass';
 @import '../node_modules/bulma/sass/elements/container.sass';
+@import '../node_modules/bulma/sass/elements/icon.sass';
 // @import '../node_modules/bulma/sass/elements/form.sass';
 @import '../node_modules/bulma/sass/elements/title.sass';
 // @import '../node_modules/bulma/sass/components/navbar.sass';
+@import '../node_modules/bulma/sass/components/level.sass';
 @import '../node_modules/bulma/sass/layout/hero.sass';
 @import '../node_modules/bulma/sass/layout/section.sass';
+@import '../node_modules/bulma/sass/layout/footer.sass';
 @import './styles/navbar.sass'
 
 /* .navbar
@@ -114,14 +119,26 @@ hr.small-divider
 		font-style: normal;
 		color: #049372;
 
+#visualization
+	width: 300px
+	height: 300px;
 
 
 p.paragraph
 	text-indent: 4em;
 	font-size: 1.1em;
+	text-align: justify;
 	&::first-letter
 	    font-size: 1.7em;
 	    line-height: 1em;
+
+.icon.is-link
+	&:hover, &:focus, &:active
+		cursor: pointer;
+		color: $yellow;
+		transition-duration: 0.2s;
+		// transition-property: transform;
+		// transform: scale(1.3) translateZ(0);
 
 .navbar-item
 	font-weight: bold;
