sized the graph

--- a/src/App.sass
+++ b/src/App.sass
@@ -120,9 +120,12 @@ hr.small-divider
 		color: #049372;
 
 #visualization
-	width: 300px
-	height: 300px;
+	margin: auto;
+	width: 80vw;
+	height: 80vw;
 
+canvas + canvas
+	display: none;
 
 p.paragraph
 	text-indent: 4em;
