finished setting up skills chart

--- a/src/App.sass
+++ b/src/App.sass
@@ -36,6 +36,7 @@ $footer-background-color: #141217;
 @import '../node_modules/bulma/sass/utilities/_all.sass';
 @import '../node_modules/bulma/sass/base/_all.sass';
 @import '../node_modules/bulma/sass/grid/_all.sass';
+@import '../node_modules/bulma/sass/elements/content.sass';
 @import '../node_modules/bulma/sass/elements/button.sass';
 @import '../node_modules/bulma/sass/elements/container.sass';
 @import '../node_modules/bulma/sass/elements/icon.sass';
@@ -121,11 +122,11 @@ hr.small-divider
 
 #visualization
 	margin: auto;
-	width: 80vw;
-	height: 80vw;
+	width: 70vw;
+	height: 70vw;
 
-canvas + canvas
-	display: none;
+// canvas + canvas
+// 	visibility: transparent;
 
 p.paragraph
 	text-indent: 4em;
