added text list of skills

--- a/src/App.sass
+++ b/src/App.sass
@@ -48,6 +48,7 @@ $footer-background-color: #141217;
 @import '../node_modules/bulma/sass/layout/section.sass';
 @import '../node_modules/bulma/sass/layout/footer.sass';
 @import './styles/navbar.sass'
+// @import './styles/orgchart.css'
 
 /* .navbar
 	position: absolute;
