added art and games

--- a/src/App.sass
+++ b/src/App.sass
@@ -147,6 +147,10 @@ p.paragraph
 	&::first-letter
 	    font-size: 1.7em;
 	    line-height: 1em;
+	a 
+		color: $turquoise;
+		&:hover
+			text-decoration: underline;
 
 .icon.is-link
 	&:hover, &:focus, &:active
@@ -187,6 +191,11 @@ ul
 				border-left: 1px solid $turquoise;
 			margin-left: 2px;
 
+.footer 
+	i 
+		color: white;
+	color: white; 
+	padding: 3rem 1.5rem 3rem;
 
 @keyframes moveDown
     0%
