--- a/src/App.sass
+++ b/src/App.sass
@@ -86,7 +86,7 @@ h1.title, span.title
 
 hr.small-divider
 	// background-color: $yellow
-	width: 300px;
+	max-width: 300px;
 	margin: 10px auto;
 
 .astrodivider
@@ -123,8 +123,18 @@ hr.small-divider
 
 #visualization
 	margin: auto;
-	width: 65vw;
-	height: 65vw;
+	min-width: 75vw;
+	min-height: 75vw;
+
+a 
+	color: white;
+	// .icon.is-link
+	&:hover, &:focus, &:active
+		cursor: pointer;
+		color: $yellow;
+		transition-duration: 0.2s;
+		// transition-property: transform;
+		// transform: scale(1.3) translateZ(0);
 
 .cover
 	position: relative;
@@ -152,13 +162,7 @@ p.paragraph
 		&:hover
 			text-decoration: underline;
 
-.icon.is-link
-	&:hover, &:focus, &:active
-		cursor: pointer;
-		color: $yellow;
-		transition-duration: 0.2s;
-		// transition-property: transform;
-		// transform: scale(1.3) translateZ(0);
+
 
 .navbar-item
 	font-weight: bold;
@@ -172,6 +176,8 @@ p.paragraph
 span.icon
 	&.is-spaced
 		margin-bottom: 10px;
+	&+div
+		padding-top: 6px;
 
 ul
 	color: $turquoise;
