adjusted tags for mobile

--- a/src/App.sass
+++ b/src/App.sass
@@ -99,9 +99,10 @@ h1.title, span.title
 .hero-right
 	filter: blur(1px);
 
-.tag
-	& + .tag
-		word-spacing: 10px;
+.tag + .tag
+ 		word-spacing: 6px;
+
+
 
 hr.small-divider
 	// background-color: $yellow
