added EMDR for stephanie

--- a/src/App.sass
+++ b/src/App.sass
@@ -236,5 +236,14 @@ ul
 	
 	100% 
 		opacity: 1;
-	
 
+.emdr-container
+	background-color: lightblue;
+	height: 600px;
+	position: relative;
+	.emdr-image
+		position: absolute;
+		left: 0;
+		display: block;
+		top: 50%;
+		transition: .75s;
